--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.2.1"
+    "@astrojs/image": "^0.16.6",
+    "@astrojs/react": "^2.1.1",
+    "@astrojs/tailwind": "^3.1.1",
+    "@react-three/drei": "^9.65.3",
+    "@react-three/fiber": "^8.12.1",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "astro": "^2.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "sharp": "^0.31.3",
+    "tailwindcss": "^3.3.1",
+    "three": "^0.151.3"
   }
 }
