--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/markdown-remark": "^5.1.0",
-    "@astrojs/react": "^3.3.0",
+    "@astrojs/react": "^3.3.2",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.3",
+    "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@docsearch/css": "3",
-    "@docsearch/react": "3",
+    "@docsearch/css": "^3.6.0",
+    "@docsearch/react": "^3.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@shikijs/rehype": "^1.3.0",
-    "@tailwindcss/typography": "^0.5.12",
+    "@shikijs/rehype": "^1.4.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/chroma-js": "^2.4.4",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.2.78",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@waline/client": "^3.1.3",
-    "astro": "^4.6.1",
+    "astro": "^4.7.1",
     "chroma-js": "^2.4.2",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.1.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.8",
     "hastscript": "^9.0.0",
     "jotai": "^2.8.0",
     "lodash-es": "^4.17.21",
     "mdast-util-to-string": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
