--- a/src/content/projects/gyoza.yaml
+++ b/src/content/projects/gyoza.yaml
@@ -1,4 +1,4 @@
-title: Gyoza
-description: Gyoza 是一个使用 Astro 和 React 开发的响应式博客主题
-image: https://s2.loli.net/2024/03/02/hba5MAilRXguZtr.webp
-link: https://github.com/lxchapu/astro-gyoza
+title: Koro Diary
+description: This app keeps track of your health and thoughts
+image: https://www.themorgan.org/sites/default/files/images/exhibitions/hawthorne-sophia.jpg
+link: https://github.com/DigitalDemi/Kokoro-Diary
