--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,17 +17,17 @@ jobs:
       - name: Check out your repository using git
         uses: actions/checkout@v2
 
-      - name: Use Node.js 16
+      - name: Set up Node.js with pnpm
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies with pnpm
+        run: pnpm install --frozen-lockfile
 
-      - name: Build Astro
-        run: npm run build --if-present
+      - name: Build Astro with pnpm
+        run: pnpm run build --if-present
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
