--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,3 @@
-name: Deploy to Astro to GitHub Pages
-
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,11 +5,14 @@ jobs:
       - name: Check out your repository using git
         uses: actions/checkout@v2
 
-      - name: Set up Node.js with pnpm
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies with pnpm
         run: pnpm install --frozen-lockfile
@@ -48,4 +39,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-
