--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,15 @@
+name: Deploy to Astro to GitHub Pages
+
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -5,14 +17,11 @@ jobs:
       - name: Check out your repository using git
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
+      - name: Set up Node.js with pnpm
         uses: actions/setup-node@v2
         with:
           node-version: '16'
           cache: 'pnpm'
-
-      - name: Install pnpm
-        run: npm install -g pnpm
 
       - name: Install dependencies with pnpm
         run: pnpm install --frozen-lockfile
