--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,22 +32,25 @@ jobs:
       - name: Build Astro with pnpm
         run: pnpm run build --if-present
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
         with:
+          name: dist
           path: ./dist
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
-    runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: Download artifact
-        uses: actions/download-pages-artifact@v1
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
         with:
-          path: ./dist
+          name: dist
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
