--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Astro to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -14,43 +14,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out your repository using git
-        uses: actions/checkout@v2
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Set up Node.js with pnpm
-        uses: actions/setup-node@v2
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site
+        uses: withastro/action@v2
         with:
-          node-version: '18'
-          cache: 'pnpm'
-
-      - name: Install dependencies with pnpm
-        run: pnpm install --frozen-lockfile
-
-      - name: Build Astro with pnpm
-        run: pnpm run build --if-present
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: ./dist
+          path: . # The root location of your Astro project inside the repository. (optional)
+          node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
+          package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
-
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+        id: deployment
+        uses: actions/deploy-pages@v4
